# softfoundry

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  README.md  pyproject.toml
src/softfoundry/: __init__.py
src/softfoundry/agents/: __init__.py  manager.py  programmer.py  reviewer.py
src/softfoundry/cli/: __init__.py  clear.py  debug.py  manager.py  programmer.py  reviewer.py
src/softfoundry/mcp/: __init__.py  constants.py  github_client.py  orchestrator.py  types.py
src/softfoundry/utils/: __init__.py  env.py  github.py  input.py  interactive.py  llm.py  loop.py  output.py  sessions.py  state.py  status.py
tests/: test_github_client.py  test_github_client_integ.py  test_orchestrator.py
