[project]
name = "softfoundry"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Rafid", email = "rafid@cohere.com" }
]
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.79.0",
    "claude-agent-sdk>=0.1.35",
    "rich>=14.3.2",
]

[project.scripts]
softfoundry = "softfoundry:main"
softfoundry-clear = "softfoundry.cli.clear:main"

[build-system]
requires = ["uv_build>=0.10.1,<0.11.0"]
build-backend = "uv_build"
